fix bug on IE small

--- a/frontend/web/less/desktop/topic.less
+++ b/frontend/web/less/desktop/topic.less
@@ -303,11 +303,13 @@
                         background: #fff;
                         border: none;
                         font-weight: bold;
+                        padding: 4px;
                     }
                     input{
                         border: none;
                         padding: 0;
-                            width: 100%
+                        width: 100%;
+                        padding: 3px 0;
                     }
                 }
                 textarea.message{
@@ -372,7 +374,7 @@
                 border: 1px solid #eee;
                 outline: none;
                 text-align: left;
-                padding: 0 10px;
+                padding: 3px 10px;
             }
         }
     }
