--- a/frontend/web/less/mobile/topic.less
+++ b/frontend/web/less/mobile/topic.less
@@ -239,8 +239,10 @@
                     background: #fff;
                     border: none;
                     font-weight: bold;
+                    padding: 4px;
                 }
                 input{
+                    padding: 5px;
                     border: none;
                     padding: 0;
                     width: 100%;
